fixed title width on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -195,7 +195,7 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 347px) {
+@media only screen and (min-width: 440px) {
     .particles-small {
         .particles-js-canvas-el {
             height: 160px !important;
